[package]
name = "deep_causality_ast"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
description = "AST data structure for deep_causality crate."
documentation = "https://docs.rs/deep_causality"
categories = ["data-structures", "science"]
keywords = ["data-structures", "ast"]
# Exclude all bazel files as these conflict with Bazel workspace when vendored.
exclude = ["*.bazel", "*/*.bazel",  "*.bazel.*", "BUILD", "BUILD.bazel", "MODULE.bazel", ".bazelignore",".bazelrc", "tests/**/*"]

