[package]
name = "deep_causality_calculus"
version = "0.1.3"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
description = "Arrow-native differentiation and integration operators (the tangent functor over Dual, endomorphism iteration over endo-arrows, and quadrature) for the deep_causality project."
documentation = "https://docs.rs/deep_causality"
categories = ["development-tools", "mathematics"]
keywords = ["autodiff", "integration", "arrow", "calculus"]
# Exclude all bazel files as these conflict with Bazel workspace when vendored.
exclude = [
    "*.bazel",
    "*/*.bazel",
    "*.bazel.*",
    "BUILD",
    "BUILD.bazel",
    "MODULE.bazel",
    ".bazelignore",
    ".bazelrc",
    "tests/**/*",
    "papers/*",
]


[features]
default = ["std"]
std = ["alloc", "deep_causality_haft/std", "deep_causality_num/std", "deep_causality_algebra/std", "deep_causality_num_dual/std"]
alloc = ["deep_causality_haft/alloc"]


[dependencies.deep_causality_haft]
path = "../deep_causality_haft"
version = "0.4"

[dependencies.deep_causality_num]
path = "../deep_causality_num"
version = "0.4"

[dependencies.deep_causality_algebra]
path = "../deep_causality_algebra"
version = "0.2"

[dependencies.deep_causality_num_dual]
path = "../deep_causality_num_dual"
version = "0.1"

[lints]
workspace = true
