load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "deep_causality_cfd",
    srcs = glob([
        "src/**",
    ]),
    crate_features = [
        "std",
    ],
    crate_root = "src/lib.rs",
    tags = [
        "cfd",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//deep_causality_calculus",
        "//deep_causality_core",
        "//deep_causality_fft",
        "//deep_causality_haft",
        "//deep_causality_metric",
        "//deep_causality_multivector",
        "//deep_causality_num",
        "//deep_causality_par",
        "//deep_causality_physics",
        "//deep_causality_sparse",
        "//deep_causality_tensor",
        "//deep_causality_topology",
        "//deep_causality_uncertain",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality_cfd",
    crate_features = [
        "std",
    ],
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality_cfd",
    crate_features = [
        "std",
    ],
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
