# SPDX-License-Identifier: MIT
# Copyright (c) 2023 - 2026. The DeepCausality Authors and Contributors. All Rights Reserved.

[package]
name = "deep_causality_cfd"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
description = "Computational fluid dynamics solvers and the Flow DSL for DeepCausality."
documentation = "https://docs.rs/deep_causality"
categories = ["science", "simulation"]
keywords = ["cfd", "fluid-dynamics", "causality", "simulation"]
publish = false
exclude = [
    "*.bazel",
    "*/*.bazel",
    "*.bazel.*",
    "BUILD",
    "BUILD.bazel",
    "MODULE.bazel",
    ".bazelignore",
    ".bazelrc",
    "tests/**/*",
]

[features]
default = ["std"]
# This crate is std-only
std = [
    "deep_causality_core/std",
    "deep_causality_num/std",
    "deep_causality_physics/std",
    "dep:deep_causality_uncertain",
]
# Opt-in CPU parallelism. Forwards to the topology crate's Rayon-backed DEC
# operator loops and the shared `MaybeParallel` marker. Serial by default;
parallel = [
    "deep_causality_topology/parallel",
    "deep_causality_par/parallel",
    "deep_causality_fft/parallel",
]

[dependencies.deep_causality_physics]
path = "../deep_causality_physics"
version = "0.6.2"
default-features = false

[dependencies.deep_causality_calculus]
path = "../deep_causality_calculus"
version = "0.1"

[dependencies.deep_causality_core]
path = "../deep_causality_core"
version = "0.10.0"

[dependencies.deep_causality_haft]
path = "../deep_causality_haft"
version = "0.3"

[dependencies.deep_causality_num]
path = "../deep_causality_num"
version = "0.3"

[dependencies.deep_causality_tensor]
path = "../deep_causality_tensor"
version = "0.4"

# Std-only: the uncertain-inflow zone consumes `MaybeUncertain<R>` and its global
# sample cache. Gated behind `std` so the `alloc`-only build stays uncertain-free.
[dependencies.deep_causality_uncertain]
path = "../deep_causality_uncertain"
version = "0.3"
optional = true

[dependencies.deep_causality_topology]
path = "../deep_causality_topology"
version = "0.6"

[dependencies.deep_causality_par]
path = "../deep_causality_par"
version = "0.1"

[dependencies.deep_causality_fft]
path = "../deep_causality_fft"
version = "0.1"
default-features = false

[dev-dependencies]
criterion = { version = "0.8" }

[lints]
workspace = true
