# SPDX-License-Identifier: MIT
# Copyright (c) 2023 - 2026. The DeepCausality Authors and Contributors. All Rights Reserved.

[package]
name = "deep_causality_cfd"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
description = "Computational fluid dynamics solvers and the Flow DSL for DeepCausality."
documentation = "https://docs.rs/deep_causality"
categories = ["science", "simulation"]
keywords = ["cfd", "fluid-dynamics", "causality", "simulation"]
# Benches are declared explicitly (one per solver), so they are not auto-discovered.
autobenches = false
exclude = [
    "*.bazel",
    "*/*.bazel",
    "*.bazel.*",
    "BUILD",
    "BUILD.bazel",
    "MODULE.bazel",
    ".bazelignore",
    ".bazelrc",
    "tests/**/*",
    "papers/*",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

# This crate is std-only
std = [
    "deep_causality_core/std",
    "deep_causality_num/std",
    "deep_causality_algebra/std",
    "deep_causality_num_complex/std",
    "deep_causality_num_dual/std",
    "deep_causality_physics/std",
    "dep:deep_causality_uncertain",
]

# Opt-in CPU parallelism. Forwards to the topology crate's Rayon-backed DEC
# operator loops and the shared `MaybeParallel` marker. Serial by default;
parallel = [
    "deep_causality_topology/parallel",
    "deep_causality_par/parallel",
    "deep_causality_fft/parallel",
]

[dependencies.deep_causality_physics]
path = "../deep_causality_physics"
version = "0.8"
default-features = false

[dependencies.deep_causality_calculus]
path = "../deep_causality_calculus"
version = "0.1"

[dependencies.deep_causality_core]
path = "../deep_causality_core"
version = "0.11"

[dependencies.deep_causality_file]
path = "../deep_causality_file"
version = "0.1"

[dependencies.deep_causality_haft]
path = "../deep_causality_haft"
version = "0.4"

[dependencies.deep_causality_num]
path = "../deep_causality_num"
version = "0.4"

[dependencies.deep_causality_algebra]
path = "../deep_causality_algebra"
version = "0.2"

[dependencies.deep_causality_num_complex]
path = "../deep_causality_num_complex"
version = "0.1"

[dependencies.deep_causality_num_dual]
path = "../deep_causality_num_dual"
version = "0.1"

[dependencies.deep_causality_tensor]
path = "../deep_causality_tensor"
version = "0.5"

# Std-only: the uncertain-inflow zone consumes `MaybeUncertain<R>` and its global
# sample cache. Gated behind `std` so the `alloc`-only build stays uncertain-free.
[dependencies.deep_causality_uncertain]
path = "../deep_causality_uncertain"
version = "0.5"
optional = true

[dependencies.deep_causality_topology]
path = "../deep_causality_topology"
version = "0.7"

[dependencies.deep_causality_par]
path = "../deep_causality_par"
version = "0.1"

[dependencies.deep_causality_fft]
path = "../deep_causality_fft"
version = "0.1"
default-features = false

[dev-dependencies]
criterion = { version = "0.8" }
tempfile = { version = "3", default-features = false }

[[bench]]
name = "bench_dec_ns_march"
harness = false

[[bench]]
name = "bench_mms_verify"
harness = false

[[bench]]
name = "bench_operator_study"
harness = false

# Verification examples (migrated from `examples/avionics_examples`): each runs a DEC/MMS case
# through the CfdFlow DSL and self-verifies against a known reference or an internal invariant.
[[example]]
name = "mms_taylor_green_verification"
path = "verification/mms_taylor_green_verification/main.rs"

[[example]]
name = "dec_taylor_green_re1600_verification"
path = "verification/dec_taylor_green_re1600_verification/main.rs"

[[example]]
name = "dec_lid_cavity_re1000_verification"
path = "verification/dec_lid_cavity_re1000_verification/main.rs"

[[example]]
name = "dec_graded_mms_verification"
path = "verification/dec_graded_mms_verification/main.rs"

[[example]]
name = "dec_cylinder_wake_verification"
path = "verification/dec_cylinder_wake_verification/main.rs"
required-features = ["std"]

[[example]]
name = "dec_cylinder_verification"
path = "verification/dec_cylinder_verification/main.rs"
required-features = ["std"]

[[example]]
name = "qtt_taylor_green_verification"
path = "verification/qtt_taylor_green_verification/main.rs"

[[example]]
name = "qtt_cylinder_verification"
path = "verification/qtt_cylinder_verification/main.rs"

[[example]]
name = "qtt_park2t_blackout"
path = "verification/qtt_park2t_blackout/main.rs"

[[example]]
name = "qtt_sod"
path = "verification/qtt_sod/main.rs"

[[example]]
name = "qtt_ramc_stagline"
path = "verification/qtt_ramc_stagline/main.rs"

[[example]]
name = "qtt_blunt_body_2d"
path = "verification/qtt_blunt_body_2d/main.rs"

[[example]]
name = "qtt_reentry_3d"
path = "verification/qtt_reentry_3d/main.rs"

# Studies: empirical tests of the "flowfield is low tensor-train rank" thesis.
[[example]]
name = "qtt_rank_study"
path = "studies/qtt_rank_study/main.rs"

[[example]]
name = "qtt_rank_dynamic"
path = "studies/qtt_rank_dynamic/main.rs"

[[example]]
name = "qtt_rank_nonlinear"
path = "studies/qtt_rank_nonlinear/main.rs"

[[example]]
name = "qtt_rank_3d"
path = "studies/qtt_rank_3d/main.rs"

# Compressible-carrier timing: Task 0 of add-compressible-blackout-carrier (go/no-go grid pick).
[[example]]
name = "compressible_carrier_timing"
path = "studies/compressible_carrier_timing/main.rs"

# Round-2 studies: de-risk the resolution-4/5/6 design nodes before the compressible build.
[[example]]
name = "qtt_rank_fitted_dynamic"
path = "studies/qtt_rank_fitted_dynamic/main.rs"

[[example]]
name = "qtt_acoustic_precond"
path = "studies/qtt_acoustic_precond/main.rs"

[[example]]
name = "qtt_blend_metric"
path = "studies/qtt_blend_metric/main.rs"

[[example]]
name = "qtt_repin_marcher"
path = "studies/qtt_repin_marcher/main.rs"

# Plume rank + fork economics: the plasma-retropulsion de-risk study (roadmap M1 risks 2 + 3).
[[example]]
name = "qtt_rank_plume"
path = "studies/qtt_rank_plume/main.rs"

# Momentum-jet follow-up: does a momentum-carrying jet (formed plume)
# recover the Jarvinen-Adams collapse the pinned-envelope imprint could not?
[[example]]
name = "srp_momentum_jet"
path = "studies/srp_momentum_jet/main.rs"

# Gap-3 trajectory-axis feasibility studies: de-risk Resolution-1's perturbed-conformal split (the
# generator, the aero-coupling law, the relativistic clock) before specifying the trajectory propagator.
[[example]]
name = "traj_fs1_generator"
path = "studies/traj_fs1_generator/main.rs"

[[example]]
name = "traj_fs2_coupling"
path = "studies/traj_fs2_coupling/main.rs"

[[example]]
name = "traj_fs3_clock"
path = "studies/traj_fs3_clock/main.rs"

[lints]
workspace = true
