load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "deep_causality_core",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    crate_features = [
        "std",
        "non-std",
        "alloc",
    ],  #
    tags = [
        "deep_causality_core",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//deep_causality_haft",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality_core",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality_core",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
