[package]
name = "deep_causality_core"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
description = "Core types for deep_causality crate."
documentation = "https://docs.rs/deep_causality"
categories = ["development-tools"]
keywords = ["causality", "core"]
exclude = [
    "*.bazel",
    "*/*.bazel",
    "*.bazel.*",
    "BUILD",
    "BUILD.bazel",
    "MODULE.bazel",
    ".bazelignore",
    ".bazelrc",
    "tests/**/*",
]
# Temporary on hold until integration into main crate
publish = false

[features]
default = ["std"]
std = ["alloc", "deep_causality_haft/std"]
alloc = []
strict-zst = []

[dependencies]
deep_causality_haft = { path = "../deep_causality_haft", version = "0.2"}

[[example]]
name = "control_flow_builder"
path = "examples/control_flow_builder.rs"

[[example]]
name = "control_flow_strict_zst"
path = "examples/control_flow_strict_zst.rs"
required-features = ["strict-zst"]

[[example]]
name = "propagating_effect_example"
path = "examples/propagating_effect.rs"

[[example]]
name = "propagating_effect_counterfactual_example"
path = "examples/propagating_effect_counterfactual.rs"

[[example]]
name = "propagating_process_example"
path = "examples/propagating_process.rs"

[[example]]
name = "propagating_process_counterfactual"
path = "examples/propagating_process_counterfactual.rs"
