load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "deep_causality_discovery",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "data_structures",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal dependencies
        "//deep_causality_tensor",
        "//deep_causality_algorithms",
        # External dependencies
        "//thirdparty/crates:csv",
        "//thirdparty/crates:parquet",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality_discovery",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality_discovery",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
