[package]
name = "deep_causality_discovery"
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

description = "Causality discovery DSL for the DeepCausality project."
documentation = "https://docs.rs/deep_causality"
homepage = "https://deepcausality.com/"
repository = "https://github.com/deepcausality/deep_causality.rs"
keywords = ["surd", "causal-discovery", "causal-reasoning", "algorithms"]
categories = ["algorithms", "science", "aerospace", "finance", "mathematics"]
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
exclude = [
    "*.bazel",
    "*/*.bazel",
    "*.bazel.*",
    "BUILD",
    "BUILD.bazel",
    "MODULE.bazel",
    ".bazelignore",
    ".bazelrc",
    "tests/**/*",
    "papers/*",
]


# Internal dependencies

[dependencies.deep_causality_algorithms]
path = "../deep_causality_algorithms"
version = "0.4"

[dependencies.deep_causality_num]
path = "../deep_causality_num"
version = "0.4"

[dependencies.deep_causality_algebra]
path = "../deep_causality_algebra"
version = "0.2"

[dependencies.deep_causality_haft]
path = "../deep_causality_haft"
version = "0.4"


[dependencies.deep_causality_tensor]
path = "../deep_causality_tensor"
version = "0.5"


[dependencies.deep_causality_topology]
path = "../deep_causality_topology"
version = "0.7"


# External dependencies
[dependencies]
csv = {version = "1.4", default-features = false}
parquet = {version = "59", default-features = false}


[dev-dependencies]
tempfile = {version = "3", default-features = false}
deep_causality_rand = { path = "../deep_causality_rand", version = "0.2" }


# Comparison: cold (BOSS learns) vs warm (CPDAG cache) end-to-end runs.
#   cargo run --release -p deep_causality_discovery --example brcd_cache_cold_vs_warm
[[example]]
name = "brcd_cache_cold_vs_warm"
path = "examples/brcd_cache_cold_vs_warm.rs"

[features]
default = []
# Enables parallel execution of the SURD algorithm by passing the feature to the algorithms crate.
parallel = ["deep_causality_algorithms/parallel"]

[lints]
workspace = true
