load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test")

rust_library(
    name = "deep_causality_effects",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "effects",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//deep_causality_tensor",
        "//deep_causality_multivector",
        "//deep_causality_topology",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality_effects",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality_effects",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
