[package]
name = "deep_causality_effects"
version = "0.0.8"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = "DEPRECATED. Retired crate; the name is effectively free for reuse. See README."
repository = "https://github.com/deepcausality/deep_causality.rs"
keywords = ["deprecated"]
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]

[dependencies]

[dev-dependencies]
