[package]
name = "deep_causality_fft"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

repository = "https://github.com/deepcausality/deep_causality.rs"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
description = "Fast Fourier transform (FFT, rFFT, N-dimensional) for the deep_causality crate."
documentation = "https://docs.rs/deep_causality"
categories = ["mathematics", "science", "algorithms"]
keywords = ["fft", "rfft", "spectral", "fourier"]
exclude = [
    "*.bazel",
    "*/*.bazel",
    "*.bazel.*",
    "BUILD",
    "BUILD.bazel",
    "MODULE.bazel",
    ".bazelignore",
    ".bazelrc",
    "tests/**/*",
]

[features]
default = ["std"]
std = ["deep_causality_num/default"]
# Opt-in Rayon parallelism for the batched 1-D transforms inside
# N-dimensional plans (the SURD pattern used across the workspace).
# Serial behavior and results are unchanged; small transforms stay
# serial behind a measured granularity threshold.
parallel = ["dep:rayon"]

[dependencies.deep_causality_num]
path = "../deep_causality_num"
version = "0.3"
default-features = false

[dependencies.rayon]
version = "1.11"
optional = true

[dev-dependencies]
criterion = { version = "0.8" }

[[bench]]
name = "fft_benchmark"
harness = false

[lints]
workspace = true
