load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "deep_causality_file",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "file_io",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal dependencies
        "//deep_causality_haft",
        "//deep_causality_num",
        # External dependencies
        "//thirdparty/crates:chrono",
    ],
)

rust_doc(
    name = "doc",
    crate = ":deep_causality_file",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":deep_causality_file",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
